--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
         <span>tags:</span>
         <ul style="display:inline;">
             {% for tag in post.tags %}
-            <li style="display:inline;"><a href="{{site.baseurl}}/tag/{{ tag }}.html">{{ tag }}</a></li>
+            <li style="display:inline;"><a href="{{site.baseurl}}/tags/{{ tag }}">{{ tag }}</a></li>
             {% endfor %}
         </ul>
     </nav>
